Fixed progress bar alignment on Firefox.

--- a/apps/workbench/app/assets/stylesheets/application.css.scss
+++ b/apps/workbench/app/assets/stylesheets/application.css.scss
@@ -122,7 +122,7 @@ ul.arvados-nav li ul li {
 }
 
 .inline-progress-container {
-    width: 100px;
+    width: 100%;
     display:inline-block;
 }
 
